Issue #3086233 by fabianderijk: Typo in module description

--- a/tablefield.info.yml
+++ b/tablefield.info.yml
@@ -1,5 +1,5 @@
 name: 'TableField'
-description: 'Defines a generic tablular data field.'
+description: 'Defines a generic tabular data field.'
 package: Field types
 
 type: module
