--- a/tablefield_required/tablefield_required.info.yml
+++ b/tablefield_required/tablefield_required.info.yml
@@ -3,5 +3,6 @@ description: 'Set required on certain rows/cols.'
 package: Field types
 type: module
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - tablefield:tablefield
