--- a/tablefield.info.yml
+++ b/tablefield.info.yml
@@ -3,8 +3,7 @@ description: 'Defines a generic tabular data field.'
 package: Field types
 
 type: module
-core: 8.x
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^9.1 || ^10
 
 dependencies:
   - drupal:field
